--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  flex-wrap: wrap;
 }
 
 img{
@@ -37,4 +38,9 @@ img{
   border: 2px solid white;
   border-radius: 50%;
   background-color: white;
+}
+
+
+.d-none{
+  display: none;
 }
